# dollscript

./: .gitignore  Cargo.toml  README.markdown
.github/workflows/: rust.yml
components/dollmarkup/: Cargo.toml
components/dollmarkup/src/: lib.rs
components/dollmarkup/src/modules/: ast.rs  err.rs  lexer.rs  mod.rs  processor.rs  tests.rs
example/: app.dmu  fact.dolls  fizzbuzz.doll  outfits.doll  sample.doll  sample.dolls
src/: lib.rs  main.rs
src/modules/: cli.rs  err.rs  lexer.rs  mod.rs  parser.rs
